# utilmm

./: .boring  CHANGELOG.rst  CMakeLists.txt  Changes.txt  Doxyfile.in  INSTALL  Init.make.in  Makefile  Makefile.in  README  README.txt  acinclude.m4  autogen.sh  configure.ac  ltmain.sh  manifest.xml  package.xml  stdc++.h  utilmm.pc.in
aclocal/: apr_threads.m4  boost.m4  clbs.m4  debug.m4  doxygen.m4  general.m4  pch.m4
cmake/: FindBoost.cmake  GenerateDoxygenDoc.cmake
debian/: changelog  control  copyright  docs  gbp.conf  libutilmm1-dev.install  libutilmm1.install  rules
doc/: footer.html
mk/: app.mk  autotools-root.mk  autotools.mk  compile.mk  depend.mk  include.mk  init.mk.in  lib.mk  pch.mk  recurse.mk  test.mk
src/: CMakeLists.txt  Makefile.in
src/configfile/: Makefile.in  commandline.cc  configfile.cc  configset.cc  pkgconfig.cc  shell_expand.cc
src/configsearch/: configuration_finder.cc
src/demangle/: Makefile.in  demangle.cc
src/memory/: Makefile.in  dynamic_pool.cc
src/singleton/: Makefile.in  dummy.cc  server.cc  server.hh
src/system/: Makefile.in  process.cc  socket.cc  system.cc  tempfile.cc
test/: CMakeLists.txt  Makefile.in  test_configfile.cc  test_configfile.config  test_misc.cc  test_pkgconfig.cc  test_pkgconfig.pc  test_process.cc  test_shellexpand.cc  test_system.cc  test_undirected_graph.cc  testsuite.cc  testsuite.hh
utilmm/: Makefile.in  auto_flag.hh  iterator_sequence.hh  stringlist.hh  stringtools.hh  undirected_graph.hh
utilmm/config/: config.h.in
utilmm/configfile/: commandline.hh  configfile.hh  exceptions.hh  pkgconfig.hh  shell_expand.hh
utilmm/configsearch/: configuration_finder.hh
utilmm/demangle/: demangle.hh
utilmm/functional/: arg_traits.hh  binary_compose.hh  cached_fn.hh  unary_compose.hh  utils.hh
utilmm/functional/bits/: cached_fn.tcc
utilmm/hash/: hash.hh  hash_fwd.hh  hash_map.hh  hash_set.hh
utilmm/hash/bits/: hash.tcc  iter.hh  iter.tcc  table.hh  table.tcc  table_fwd.hh
utilmm/memory/: dynamic_pool.hh  objectpool.hh  sweep.hh
utilmm/plugin/: abstract_factory.hh  concrete_factory.hh  dll.hh  export_plugin.hh  plugin_factory.hh  plugin_wrapper.hh  virtual_constructors.hh
utilmm/smart/: count_pointer.hh  pointer.hh  uniq_pointer.hh
utilmm/smart/bits/: pointer.tcc  ref_count_manager.hh  ref_count_manager.tcc  simple_memory.hh  uniq_memory.hh  uniq_memory.tcc
utilmm/system/: endian.hh  process.hh  socket.hh  system.hh  tempfile.hh
utilmm/types/: factory.hh  factory_fwd.hh  symbol.hh  symbol_fwd.hh
utilmm/types/bits/: basic_symbol.hh  basic_symbol.tcc  basic_symbol_fwd.hh  factory_error.hh  factory_error_fwd.hh
